# BiobaseXNA

./: .buildbot-devel  .travis.yml  BiobaseXNA.cabal  LICENSE  README.md  SubOptDistance.hs  TODO.md  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  shell.nix  stack.yaml
.github/workflows/: action.yml  ci.yml  hackage.yml
Biobase/: AAseq.hs  Codon.hs  Primary.hs  Secondary.hs
Biobase/Primary/: AA.hs  Bounds.hs  Hashed.hs  IUPAC.hs  Letter.hs  Nuc.hs  Pretty.hs  Trans.hs  Unknown.hs
Biobase/Primary/Nuc/: Conversion.hs  DNA.hs  RNA.hs  XNA.hs
Biobase/Secondary/: Basepair.hs  Constraint.hs  Convert.hs  Diagrams.hs  Isostericity.hs  New.hs  PseudoKnots.hs  Pseudoknots.hs  Structure.hs  Vienna.hs
sources/: codontable  isostericity-detailed.csv  isostericity-matrices.csv  iupac-nucleotides
src/: SubOptDistance.hs
tests/: properties.hs
