name:           Biobase
version:        0.5.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2011
category:       Bioinformatics
synopsis:       Efficient RNA/DNA representations
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.4.0
description:
                This is a base library for bioinformatics with emphasis on RNA
                and DNA primary structure and related tools. Provided are
                efficient encodings for short sequences, as required by RNA
                folding tools. Extended RNA secondary structures can be
                represented as well.

extra-source-files:

library
  build-depends:
    attoparsec,
    attoparsec-enumerator,
    base >3 && <5,
    bytestring,
    containers,
    directory,
    either-unwrap,
    enumerator,
    filepath,
    parsec,
    primitive,
    text,
    transformers,
    tuple,
    vector >=0.7 && <0.8,
    vector-read-instances,
    HsTools,
    ParsecTools,
    PrimitiveArray

  exposed-modules:
    Biobase.Constants
    Biobase.DataSource.DotParen
    Biobase.DataSource.DotParen.Import
    Biobase.DataSource.FR3D
    Biobase.DataSource.FR3D.Import
    Biobase.DataSource.Infernal.Taxonomy
    Biobase.DataSource.Infernal.Taxonomy.Import
    Biobase.DataSource.Infernal.VerboseHit
    Biobase.DataSource.Infernal.VerboseHit.Export
    Biobase.DataSource.Infernal.VerboseHit.Import
    Biobase.DataSource.Infernal.VerboseHit.Internal
    Biobase.DataSource.MCFold
    Biobase.DataSource.MCFold.Conversions
    Biobase.DataSource.MCFold.Import
    Biobase.DataSource.TrainingData
    Biobase.Primary
    Biobase.Primary.Bounds
    Biobase.Primary.Hashed
    Biobase.Secondary
    Biobase.Secondary.Constraint
    Biobase.Secondary.Diagrams
    Biobase.Secondary.PseudoKnots

  ghc-options:
    -O2

