name:           BiobaseXNA
version:        0.9.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2011-2014
category:       Bioinformatics
synopsis:       Efficient RNA/DNA representations
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
description:
                This is a base library for bioinformatics with emphasis on RNA
                and DNA primary structure as well as amino acid sequences.
                .
                Provided are efficient encodings for short sequences, as
                required by RNA folding tools. Extended RNA secondary
                structures can be represented as well.
                .
                Contains data from:
                .
                @
                Frequency and isostericity of RNA base pairs
                Jesse Stombaugh, Craig L. Zirbel, Eric Westhof, and Neocles B. Leontis
                Nucl. Acids Res. (2009)
                @
                .
                <http://dx.crossref.org/10.1093%2Fnar%2Fgkp011>



extra-source-files:
  sources/isostericity-matrices.csv
  sources/isostericity-detailed.csv
  sources/iupac-nucleotides
  sources/codontable
  changelog.md

library
  build-depends:
    bytestring                  ,
    containers                  ,
    csv             == 0.1.*    ,
    file-embed      == 0.0.6.*  ,
    hashable        == 1.2.*    ,
    lens            == 4.*      ,
    primitive       == 0.5.*    ,
    PrimitiveArray  == 0.6.*    ,
    repa            == 3.2.*    ,
    split           == 0.2.*    ,
    text                        ,
    tuple           == 0.2.*    ,
    vector          == 0.10.*   ,
    vector-th-unbox == 0.2.*    ,
    base            == 4.*

  exposed-modules:
    Biobase.Primary
    Biobase.Primary.AA
    Biobase.Primary.Hashed
    Biobase.Primary.IUPAC
    Biobase.Primary.Letter
    Biobase.Primary.Nuc
    Biobase.Primary.Trans
    Biobase.Secondary
    Biobase.Secondary.Basepair
    Biobase.Secondary.Constraint
    Biobase.Secondary.Diagrams
    Biobase.Secondary.Isostericity
    Biobase.Secondary.Pseudoknots
    Biobase.Secondary.Vienna

  ghc-options:
    -O2 -funbox-strict-fields

executable SubOptDistance
  build-depends:
    cmdargs == 0.10.*
  main-is:
    SubOptDistance.hs
  ghc-options:
    -O2

source-repository head
  type: git
  location: git://github.com/choener/BiobaseXNA

